@@ -45,6 +45,7 @@ Bugs fixed
 - Bug 2041 - TCP RTO needs unit tests
 - Bug 2150 - The TCP sender keeps retransmitting and does not terminate the connection after some retries.
 - Bug 2159 - TCP advertises wrong receive window
+- Bug 2176 - Building IPv4 address from char* doesn't look reliable
 - Bug 2183 - LiIonEnergySourceHelper is not in the energy wscript
 - Bug 2185 - WiFi MacLow may respond to errored frames that it should ignore
 - Bug 2195 - Udp[*]Client can't send packets to broadcast address
